sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:18: error: 'while' expected but '}' found.
	}while(test)
        ^AlgCocktailSort1:18: error: ';' expected but 'while' found.
	}while(test)
         ^AlgCocktailSort1:23: error: Unmatched closing brace '}' ignored here
}
^